# leadscraper

./: Cargo.toml  README.md  repomix-output.md
config/: scraper.yaml
leads/: leads.csv  leads.json
results/: all_leads.csv  all_leads.json  contactable_leads.json  research_leads.json  stats.json
results/20250529_095811_scrape/: all_leads.csv  all_leads.json  contactable_leads.json  research_leads.json  run_metadata.json  stats.json
src/: config.rs  errors.rs  extractors.rs  lib.rs  main.rs  models.rs  scraper_util.rs
src/scrapers/: base.rs  betalist.rs  github_awesome.rs  mod.rs  ycombinator.rs
